--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: overlay_tutorial
 description: A Flutter package for displaying overlay tutorial.
 version: 0.0.1
-author:
+author: Mok Kah Wai
 homepage:
 
 environment:
@@ -16,6 +16,7 @@ dev_dependencies:
   dart_style: ^1.3.6
   flutter_test:
     sdk: flutter
+  git: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
