--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,58 +1,18 @@
 name: overlay_tutorial
-description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint
-  aside the hole.
-version: 0.0.6
+version: 0.0.7
+description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint aside the hole.
 repository: https://github.com/TabooSun/overlay_tutorial
-
-environment:
-  sdk: ">=2.7.0 <3.0.0"
-
-dependencies:
-  flutter:
+environment: 
+  sdk: '>=2.7.0 <3.0.0'
+dependencies: 
+  flutter: 
     sdk: flutter
-
-dev_dependencies:
+dev_dependencies: 
   pedantic: ^1.9.0
   dart_style: ^1.3.6
-  flutter_test:
-    sdk: flutter
   git: ^1.0.1
   args: ^1.6.0
   path: ^1.6.4
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
-flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+  flutter_test: 
+    sdk: flutter
+flutter: null
