--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: overlay_tutorial
-version: 0.0.7
+version: 0.1.0
 description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint aside the hole.
 repository: https://github.com/TabooSun/overlay_tutorial
 environment: 
@@ -7,6 +7,7 @@ environment:
 dependencies: 
   flutter: 
     sdk: flutter
+  collection: ^1.14.13
 dev_dependencies: 
   pedantic: ^1.9.0
   dart_style: ^1.3.6
