--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   flutter: 
     sdk: flutter
   collection: '>=1.14.12 <=1.14.13'
+  async: ^2.4.2
 dev_dependencies: 
   pedantic: ^1.9.0
   dart_style: ^1.3.6
