--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: overlay_tutorial
-version: 0.1.2
+version: 0.2.0
 description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint aside the hole.
 repository: https://github.com/TabooSun/overlay_tutorial
 environment: 
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   collection: '>=1.14.12 <=1.14.13'
   async: ^2.4.2
+  meta:
 dev_dependencies: 
   pedantic: ^1.9.0
   dart_style: ^1.3.6
