--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: overlay_tutorial
-version: 0.2.0
+version: 0.2.1
 description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint aside the hole.
 repository: https://github.com/TabooSun/overlay_tutorial
 environment: 
@@ -7,8 +7,8 @@ environment:
 dependencies: 
   flutter: 
     sdk: flutter
-  collection: '>=1.14.12 <=1.14.13'
-  async: ^2.4.2
+  collection: ^1.14.12
+  async: ^2.4.1
 dev_dependencies: 
   pedantic: ^1.9.0
   dart_style: ^1.3.6
