--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: overlay_tutorial
-version: 0.2.1
+version: 1.0.0
 description: A Flutter package for displaying overlay tutorial by cutting a hole on widget. It allows also to add hint aside the hole.
 repository: https://github.com/TabooSun/overlay_tutorial
 environment: 
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 dependencies: 
   flutter: 
     sdk: flutter
-  collection: ^1.14.12
-  async: ^2.4.1
+  collection: ^1.15.0
+  async: ^2.5.0
 dev_dependencies: 
-  pedantic: ^1.9.0
-  dart_style: ^1.3.6
-  git: ^1.0.1
-  args: ^1.6.0
-  path: ^1.6.4
+  pedantic: ^1.11.0
+  dart_style: ^1.3.14
+  git: ^2.0.0
+  args: ^2.0.0
+  path: ^1.8.0
   flutter_test: 
     sdk: flutter
 flutter: null
