--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,6 +11,16 @@ workflows:
       flutter: stable
       xcode: latest
       cocoapods: default
+    triggering:
+      events:
+        - tag
+      branch_patterns:
+        - pattern: master
+          include: true
+          source: true
+      tag_patterns:
+        - pattern: '*'
+          include: true
     scripts:
       - flutter packages pub get
       - |
