--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -25,7 +25,7 @@ workflows:
       - flutter packages pub get
       - |
         #!/bin/sh
-        flutter pub publish
+        flutter pub publish -f
     artifacts:
       - flutter_drive.log
     publishing:
