--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   collection: ^1.15.0
   async: ^2.5.0
+  equatable: ^2.0.3
 dev_dependencies: 
   pedantic: ^1.11.0
   dart_style: ^1.3.14
