--- a/.github/workflows/pub publish.yml
+++ b/.github/workflows/pub publish.yml
@@ -3,13 +3,13 @@
 name: 'Pub publish'
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  create:
-    ref_type: tag
+# on:
+#   # Triggers the workflow on push or pull request events but only for the master branch
+#   create:
+#     ref_type: tag
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+#   # Allows you to run this workflow manually from the Actions tab
+#   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
