--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -22,8 +22,8 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # We disable this lint for a flutter project as type of flutter stateful widget state should be private.
+    library_private_types_in_public_api: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
