--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,11 @@ dependencies:
   async: ^2.5.0
   equatable: ^2.0.3
 dev_dependencies:
-  pedantic: ^1.11.0
-  dart_style: ^1.3.14
-  git: ^2.0.0
-  args: ^2.0.0
-  path: ^1.8.0
+  pedantic: ^1.11.1
+  taboosun_lints:
+    git:
+      url: https://github.com/TabooSun/dart_taboosun_lints.git
+      ref: v1.0.1
   flutter_test:
     sdk: flutter
 flutter: null
