Fix Analyze code workflow false positive

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           channel: $FLUTTER_VERSION
 
+      - name: Get Pub packages
+        run: flutter pub get
+
       - name: Analyze code
         run: flutter analyze
 
